# monkers

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: fibonacci.monkey  map.monkey  reduce.monkey
src/: ast.rs  code.rs  compiler.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs  vm.rs
src/compiler/: mod.rs  symbol_table.rs
src/eval/: env.rs  error.rs  ir.rs  mod.rs  validate.rs
src/hir/: instruction.rs  mod.rs
src/ir/: big_integer.rs  boolean.rs  function.rs  integer.rs  mod.rs  null.rs  return_value.rs  string.rs
src/parser/: error.rs  mod.rs
