[package]
name = "monkers"
version = "0.1.0"
authors = ["lauren <poteto@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rustyline = "8.2.0"
string-interner = "0.12.2"
fnv = "1.0.7"
byteorder = "1.4.3"
clap = "3.0.0-beta.2"

[[bin]]
name = "monkers"
test = false
bench = false

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0 # Controls the --opt-level the compiler builds with
debug = true # Controls whether the compiler passes `-g`

[dev-dependencies]
expect-test = "1.4.1"
